# real_time-stereo_lidar-odometry

./: .gitignore  CMakeLists.txt  README.md  toolchain_pc.cmake  toolchain_rpi.cmake  transformations.json  transformations_camera.json  transformations_camera1.json  transformations_lidar.json
include/: LidarScanner.h  StereoCamera.h
include/rplidar_sdk/sdk/: Makefile
python_plot/: odom_plot.py
receiving_camera_lidar/: CMakeLists.txt  toolchain_pc.cmake
receiving_camera_lidar/src/: main.cpp
sending_camera_lidar/src/: main.cpp
src/: LidarScanner.cpp  StereoCamera.cpp  StereoImages.cpp  main.cpp
test/: cam_param.cpp  test_lidar  test_lidar.cpp  test_lidar_all  test_lidar_all.cpp
